# Ludwig

./: .dockerignore  .gitignore  BRIEF.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  NOTICE  README.md  cli.py  conftest.py  ludwig.py  ludwig_blender_lib.py  requirements.txt  ruff.toml  run.sh  standards.yaml
agent/: __init__.py  errors.py  inference.py  loop.py  ops.py
backends/: __init__.py  base.py  drawing.py  ifc.py  present.py  registry.py  render.py  render_toolkit.py  section.py  shopdrawing.py  step.py
core/: __init__.py  bootstrap.py  contracts.py  loaders.py  models.py  orchestrator.py  prompt_stack.py  registry.py
critic/: __init__.py  base.py  compliance.py  dimensional.py  geometric.py  manufacturing.py  panel.py  semantic.py  sketch.py
daemon/: README.md  __init__.py  app.py  db.py  discovery.py  glb.py  progress.py  requirements.txt  store.py  stream.py
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: FINDINGS.md  GTM.md  REBUILD_ROADMAP.md  ROADMAP_SESSIONS.md  UX_BRIEF.md
eval/: README.md  __init__.py  briefs.py  harness.py  llm.py  reference.py  results.jsonl
geometry/: __init__.py  evaluator.py  service.py  sketch_solver.py
ir/: __init__.py  elements.py  feature.py  sketch.py
prompts/: codegen.md  critic.md  edit.md  plan.md  repair.md
prototype/: Ludwig.dc.html  README.md  index.html
scripts/: make_gallery.py
(+53 files in other folders)
