[package]
name = "ludwig-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "ludwig_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ludwig-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
ureq = { version = "3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
